# pmem-atomic

./: .clang-tidy  CMakeLists.txt  README.md
.github/workflows/: unit_tests.yaml
include/mwcas/: mwcas_descriptor.hpp  utility.hpp
include/mwcas/component/: common.hpp  mwcas_target.hpp
include/pmem/atomic/: atomic.hpp  descriptor_pool.hpp  pmwcas_descriptor.hpp  utility.hpp
include/pmem/atomic/component/: common.hpp  pmwcas_target.hpp
include/pmwcas/: atomic.hpp  descriptor_pool.hpp  element_holder.hpp  pmwcas_descriptor.hpp  utility.hpp
include/pmwcas/component/: common.hpp  element_holder.hpp  pmwcas_descriptor.hpp  pmwcas_field.hpp  pmwcas_target.hpp  pmwcas_word.hpp
src/: atomic.cpp  descriptor_pool.cpp  pmwcas_descriptor.cpp
src/component/: common.cpp  pmwcas_target.cpp
test/: CMakeLists.txt  atomic_test.cpp  common.hpp  descriptor_pool_test.cpp  mwcas_field_test.cpp  mwcas_target_test.cpp  pmwcas_descriptor_test.cpp  pmwcas_field_test.cpp  pmwcas_target_test.cpp  pmwcas_word_test.cpp
